force-app/main/default/objects/Vehicle_Master__c/Vehicle_Master__c.object-meta.xml
<CustomObject>
    <label>Vehicle Master</label>
    <nameField>
        <displayFormat>VM-{00000}</displayFormat>
        <label>Vehicle Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Master</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>