force-app/main/default/objects/Vehicle_Master__c/fields/Body_Type__c.field-meta.xml
<CustomField>
    <fullName>Body_Type__c</fullName>
    <label>Body Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open Body</fullName>
            </value>
            <value>
                <fullName>Closed (Container)</fullName>
            </value>
            <value>
                <fullName>MS Tanker</fullName>
            </value>
            <value>
                <fullName>SS Tanker</fullName>
            </value>
            <value>
                <fullName>Milk Tanker</fullName>
            </value>
            <value>
                <fullName>Bulker</fullName>
            </value>
            <value>
                <fullName>Open Flat Body</fullName>
            </value>
            <value>
                <fullName>Refrigerated Container</fullName>
            </value>
            <value>
                <fullName>Tipper</fullName>
            </value>
            <value>
                <fullName>Route Bus</fullName>
            </value>
            <value>
                <fullName>Staff Bus</fullName>
            </value>
            <value>
                <fullName>Semi Luxury Bus</fullName>
            </value>
            <value>
                <fullName>Luxury Bus</fullName>
            </value>
            <value>
                <fullName>AC Sleeper</fullName>
            </value>
            <value>
                <fullName>Non-AC Sleeper</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
            <value>
                <fullName>Tip-Trailer</fullName>
            </value>
            <value>
                <fullName>BHL</fullName>
            </value>
            <value>
                <fullName>Excavator</fullName>
            </value>
            <value>
                <fullName>Compactor</fullName>
            </value>
            <value>
                <fullName>Generator</fullName>
            </value>
            <value>
                <fullName>Loader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>