force-app/main/default/objects/Vehicle_Master__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <label>LOB</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CV/CE</fullName>
            </value>
            <value>
                <fullName>BL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>