force-app/main/default/objects/Vehicle_Master__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <label>Make</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tata Motors Ltd</fullName>
            </value>
            <value>
                <fullName>Ashok Leyland</fullName>
            </value>
            <value>
                <fullName>Mahindra &amp; Mahindra Ltd</fullName>
            </value>
            <value>
                <fullName>Eicher Ltd</fullName>
            </value>
            <value>
                <fullName>Body Builder</fullName>
            </value>
            <value>
                <fullName>JCB Ltd.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>