force-app/main/default/objects/Vehicle_Master__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wheels</fullName>
                <default>true</default>
                <label>Wheels</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>