force-app/main/default/objects/Vehicle_Master__c/fields/Registrable__c.field-meta.xml
<CustomField>
    <fullName>Registrable__c</fullName>
    <label>Registrable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes/No</fullName>
            </value>
            <value>
                <fullName>Body</fullName>
            </value>
            <value>
                <fullName>Registrable</fullName>
            </value>
            <value>
                <fullName>Non-Registrable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>