force-app/main/default/objects/Vehicle_Master__c/fields/Sub_Product__c.field-meta.xml
<CustomField>
    <fullName>Sub_Product__c</fullName>
    <label>Sub-Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LOB</valueSetName>
    </valueSet>
</CustomField>