force-app/main/default/objects/Vehicle_Master__c/fields/Vehicle_Category__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Category__c</fullName>
    <label>Vehicle Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Goods</fullName>
            </value>
            <value>
                <fullName>Tipper</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Plant &amp; Machinery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>