force-app/main/default/objects/Vehicle_Master__c/fields/Vehicle_Classification__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Classification__c</fullName>
    <label>Vehicle Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M&amp;HCV</fullName>
            </value>
            <value>
                <fullName>L&amp;ICV</fullName>
            </value>
            <value>
                <fullName>SCV</fullName>
            </value>
            <value>
                <fullName>Pick Up</fullName>
            </value>
            <value>
                <fullName>Movable</fullName>
            </value>
            <value>
                <fullName>Stationary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>