force-app/main/default/objects/Vehicle_Master__c/fields/Vehicle_Grading__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Grading__c</fullName>
    <label>Vehicle Grading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>