force-app/main/default/objects/Vehicle_Master__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chassis</fullName>
            </value>
            <value>
                <fullName>Cab Chassis</fullName>
            </value>
            <value>
                <fullName>Fully Built</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>