force-app/main/default/objects/Vehicle_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Sub_Product__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Vehicle_Type__c</columns>
    <columns>Fuel_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>